小人已经可以上下左右行走了

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Game 1</title>
 		<script type="text/javascript" src="util.js"></script>
-		<script type="text/javascript" src="MovieClip3.js"></script>
+		<script type="text/javascript" src="MovieClip.js"></script>
 		<script type="text/javascript" src="DisplayObject.js"></script>
 		<script type="text/javascript" src="lizi.js"></script>
 		<script type="text/javascript" src="event.js"></script>
