运动元素可以进行简单自己行动了

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <html>
 	<head>
 		<title>Game 1</title>
+		<script type="text/javascript" src="js/Constants.js"></script>
 		<script type="text/javascript" src="util.js"></script>
 		<script type="text/javascript" src="MovieClip.js"></script>
+		<script type="text/javascript" src="js/MovementObject.js"></script>
 		<script type="text/javascript" src="DisplayObject.js"></script>
 		<script type="text/javascript" src="lizi.js"></script>
 		<script type="text/javascript" src="event.js"></script>
 		<script type="text/javascript" src="js/resource.js"></script>
+		<script type="text/javascript" src="js/BackGround.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</head>
+	<style>
+		html,body{
+			margin:0px;
+			padding:0px;
+		}
+	</style>
 	<body>
 		<canvas id="mycanvas" width="1024" height="768"></canvas>
 	</body>
