--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<meta http-equiv=Content-Type content="text/html;charset=utf-8">
 		<title>Game 1</title>
 		<script type="text/javascript" src="js/Constants.js"></script>
 		<script type="text/javascript" src="util.js"></script>
