--- a/test/index.html
+++ b/test/index.html
@@ -10,14 +10,22 @@
   <script src="/res/js/pre.js"></script>
 	
 	<script name="Env prepare">
-		var map = mockMap();
-		jsonmap = map;//输出为全局变量，用来覆盖原代码中的变量
-		var unit = map.unit;
-		var maxXUnit = Math.floor(map.width/unit);
-		var maxYUnit = Math.floor(map.height/unit);
+		var map;
+		var jsonmap;
+		var unit;
+		var maxXUnit;
+		var maxYUnit;
+		function setup(x,y){
+			map = createMockMap(x,y);
+			jsonmap = map;//输出为全局变量，用来覆盖原代码中的变量
+			unit = map.unit;
+			maxXUnit = Math.floor(map.width/unit);
+			maxYUnit = Math.floor(map.height/unit);
+		}
 	</script>
   <script>
   QUnit.test("测试点[0,0]在无停止点地图[0,0,2,2]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(3,3);//构建3*3的地图
     var mo = new MovementObject();
 	mo.x = 0;
 	mo.y = 0;
@@ -30,9 +38,10 @@
   });
   
   QUnit.test("测试点[1,1]在无停止点地图[0,0,2,2]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(3,3);
     var mo = new MovementObject();
-	mo.x = 1;
-	mo.y = 1;
+	mo.x = 1*unit;
+	mo.y = 1*unit;
 	var rs = mo.getRangeRf();
 	assert.ok(rs != null);
 	assert.ok(4 == rs.length);
@@ -41,9 +50,10 @@
   });
   
   QUnit.test("测试点[2,2]在无停止点地图[0,0,2,2]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(3,3);
     var mo = new MovementObject();
-	mo.x = 2;
-	mo.y = 2;
+	mo.x = 2*unit;
+	mo.y = 2*unit;
 	var rs = mo.getRangeRf();
 	assert.ok(rs != null);
 	assert.ok(4 == rs.length);
@@ -52,9 +62,10 @@
   });
   
   QUnit.test("测试点[3,3]在无停止点地图[0,0,2,2]中是否超出边界之后，可以被自动限定在最大和最小之间", function( assert ) {
+	setup(3,3);
     var mo = new MovementObject();
-	mo.x = 2;
-	mo.y = 2;
+	mo.x = 2*unit;
+	mo.y = 2*unit;
 	var rs = mo.getRangeRf();
 	assert.ok(rs != null);
 	assert.ok(4 == rs.length);
@@ -62,7 +73,8 @@
 	//assert.ok(rs[2] == 0 && rs[3] == 96);//Y方向暂时还没实现 TODO
   });
   
-  QUnit.test("测试点[0,0]在有一个停止点[0,1]地图[0,0,2,2]中是否可以获取到合适的停止坐标", function( assert ) {
+  QUnit.test("测试点[0,0]在有一个停止点[1,0]地图[0,0,2,2]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(3,3);
     var mo = new MovementObject();
 	mo.x = 0;
 	mo.y = 0;
@@ -72,14 +84,89 @@
 	var rs = mo.getRangeRf();
 	assert.ok(rs != null);
 	assert.ok(4 == rs.length);
-	console.log(rs);
 	assert.ok(rs[0] == 0 && rs[1] == 42);//检查X方向,地图3*3，停止点在第一行第二个点，当前人物在[0,0]点，那么人物可移动范围为0-31像素之间
 	//assert.ok(rs[2] == 0 && rs[3] == 96);//Y方向暂时还没实现 TODO
 	
 	map.layers[0].points[1].imgPoint = [0,0];//复位
   });
   
+  QUnit.test("测试点[2,0]在有一个停止点[1,0]地图[0,0,2,2]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(3,3);
+    var mo = new MovementObject();
+	mo.x = 2*unit;
+	mo.y = 0;
+	
+	map.layers[0].points[1].imgPoint = [1,1];//在这里把原始的地图信息重新赋值，赋予一个停止点，鉴于这是一个3*3的地图，那么points[1]表示的就是第一行第二个点。由于地图信息共享，测试完毕之后，要将地图信息复位
+	
+	var rs = mo.getRangeRf();
+	assert.ok(rs != null);
+	assert.ok(4 == rs.length);
+	assert.ok(rs[0] == 54 && rs[1] == 96);//检查X方向,地图3*3，停止点在第一行第二个点，当前人物在[2,0]点，那么人物可移动范围为0-31像素之间
+	//assert.ok(rs[2] == 0 && rs[3] == 96);//Y方向暂时还没实现 TODO
+	
+	map.layers[0].points[1].imgPoint = [0,0];//复位
+  });
+  
+  QUnit.test("测试点[0,0]在有两个停止点[0,0],[5,0]地图[0,0,5,5]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(6,6);
+    var mo = new MovementObject();
+	mo.x = 0;
+	mo.y = 0;
+	
+	map.layers[0].points[0].imgPoint = [1,1];//在这里把原始的地图信息重新赋值，赋予一个停止点，鉴于这是一个6*6的地图，那么points[1]表示的就是第一行第二个点。由于地图信息共享，测试完毕之后，要将地图信息复位
+	map.layers[0].points[5].imgPoint = [1,1];//在这里把原始的地图信息重新赋值，赋予一个停止点，鉴于这是一个6*6的地图，那么points[1]表示的就是第一行第二个点。由于地图信息共享，测试完毕之后，要将地图信息复位
+	
+	var rs = mo.getRangeRf();
+	assert.ok(rs != null);
+	assert.ok(4 == rs.length);
+	assert.ok(rs[0] == 22 && rs[1] == (unit*5+10));//检查X方向,地图6*6，停止点在第一行第二个点，当前人物在[2,0]点，那么人物可移动范围为0-31像素之间
+	//assert.ok(rs[2] == 0 && rs[3] == 96);//Y方向暂时还没实现 TODO
+	
+	map.layers[0].points[1].imgPoint = [0,0];//复位
+	map.layers[0].points[5].imgPoint = [0,0];//复位
+  });
+  
+  QUnit.test("测试点[1,0]在有两个停止点[0,0],[5,0]地图[0,0,5,5]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(6,6);
+    var mo = new MovementObject();
+	mo.x = 1*unit;
+	mo.y = 0;
+	
+	map.layers[0].points[0].imgPoint = [1,1];//在这里把原始的地图信息重新赋值，赋予一个停止点，鉴于这是一个6*6的地图，那么points[1]表示的就是第一行第二个点。由于地图信息共享，测试完毕之后，要将地图信息复位
+	map.layers[0].points[5].imgPoint = [1,1];//在这里把原始的地图信息重新赋值，赋予一个停止点，鉴于这是一个6*6的地图，那么points[1]表示的就是第一行第二个点。由于地图信息共享，测试完毕之后，要将地图信息复位
+	
+	var rs = mo.getRangeRf();
+	assert.ok(rs != null);
+	assert.ok(4 == rs.length);
+	assert.ok(rs[0] == 22 && rs[1] == (unit*5+10));//检查X方向,地图6*6，停止点在第一行第二个点，当前人物在[2,0]点，那么人物可移动范围为0-31像素之间
+	//assert.ok(rs[2] == 0 && rs[3] == 96);//Y方向暂时还没实现 TODO
+	
+	map.layers[0].points[1].imgPoint = [0,0];//复位
+	map.layers[0].points[5].imgPoint = [0,0];//复位
+  });
+  
+  QUnit.test("测试点[3,0]在有两个停止点[1,0],[5,0]地图[0,0,5,5]中是否可以获取到合适的停止坐标", function( assert ) {
+	setup(6,6);
+    var mo = new MovementObject();
+	mo.x = 3*unit;
+	mo.y = 0;
+	
+	map.layers[0].points[1].imgPoint = [1,1];//在这里把原始的地图信息重新赋值，赋予一个停止点，鉴于这是一个6*6的地图，那么points[1]表示的就是第一行第二个点。由于地图信息共享，测试完毕之后，要将地图信息复位
+	map.layers[0].points[5].imgPoint = [1,1];//在这里把原始的地图信息重新赋值，赋予一个停止点，鉴于这是一个6*6的地图，那么points[1]表示的就是第一行第二个点。由于地图信息共享，测试完毕之后，要将地图信息复位
+	
+	var rs = mo.getRangeRf();
+	assert.ok(rs != null);
+	assert.ok(4 == rs.length);
+	console.log(rs);
+	assert.ok(rs[0] == 54 && rs[1] == (unit*5+10));//检查X方向,地图6*6，停止点在第一行第二个点，当前人物在[2,0]点，那么人物可移动范围为0-31像素之间
+	//assert.ok(rs[2] == 0 && rs[3] == 96);//Y方向暂时还没实现 TODO
+	
+	map.layers[0].points[1].imgPoint = [0,0];//复位
+	map.layers[0].points[5].imgPoint = [0,0];//复位
+  });
+  
   QUnit.test("测试输入的点是否能获取到正确的图片点", function( assert ) {
+	setup(6,6);
     var mo = new MovementObject();
 	var p = [0,0];
 	var ip = mo.getImgPointByMapPoint(p);
@@ -93,7 +180,7 @@
 	ip = mo.getImgPointByMapPoint(p);
 	assert.ok(ip[0]==0 && ip[1]==0);
 	
-	p = [3,0];
+	p = [6,0];
 	ip = mo.getImgPointByMapPoint(p);
 	assert.ok(ip == null);
   });
