代码组织重构
将引擎代码与游戏自己身逻辑分开。方便引擎向不同游戏移植

--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 	<head>
 		<meta http-equiv=Content-Type content="text/html;charset=utf-8">
 		<title>Game 1</title>
-		<script type="text/javascript" src="js/Constants.js"></script>
-		<script type="text/javascript" src="util.js"></script>
-		<script type="text/javascript" src="MovieClip.js"></script>
-		<script type="text/javascript" src="js/MovementObject.js"></script>
-		<script type="text/javascript" src="DisplayObject.js"></script>
-		<script type="text/javascript" src="lizi.js"></script>
-		<script type="text/javascript" src="event.js"></script>
-		<script type="text/javascript" src="js/resource.js"></script>
-		<script type="text/javascript" src="js/BackGround.js"></script>
+		<script type="text/javascript" src="engine/js/Constants.js"></script>
+		<script type="text/javascript" src="engine/js/util.js"></script>
+		<script type="text/javascript" src="engine/js/MovieClip.js"></script>
+		<script type="text/javascript" src="engine/js/MovementObject.js"></script>
+		<script type="text/javascript" src="engine/js/DisplayObject.js"></script>
+		<script type="text/javascript" src="engine/js/event.js"></script>
+		<script type="text/javascript" src="engine/js/resource.js"></script>
+		<script type="text/javascript" src="engine/js/BackGround.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 	</head>
 	<style>
