--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 		<meta http-equiv=Content-Type content="text/html;charset=utf-8">
 		<title>Game 1</title>
 		<script type="text/javascript" src="engine/js/util.js"></script>
-		<script type="text/javascript" src="engine/js/globalScope.js"></script>
 		<script type="text/javascript" src="engine/js/amd/requirejs/require.js"></script>
 		<script>
 			"use strict"
@@ -16,12 +15,14 @@
 				urlArgs: "bust=",
 				waitSeconds: 2 
 			 }); 
-			 require( ["./booter.js","engine/MovementObject","engine/MovieClip","engine/Constants","engine/Direction"], 
-				function(starter,MovementObject,MovieClip2D,C,direction) {
+			 require( ["./booter.js","engine/MovementObject","engine/MovieClip","engine/Constants","engine/Direction","engine/globalScope"], 
+				function(starter,MovementObject,MovieClip2D,C,direction,g) {
 					var imgs = ["Actor1.png","map.png","donghua.png","eff.png"];
 					var json = ["map.json","map4.json"];
+					var audios = [{url:"res/audio/horse.ogg",name:"test1"}];
 					starter.regImgRes(imgs);
 					starter.regJSONRes(json);
+					starter.regAudioRes(audios);
 					starter.regCustomerBoot(function(){
 						//It will be called at the end of the engine boot
 						console.log("cust boot");
