增加两个音频测试

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				function(starter,MovementObject,MovieClip2D,C,direction,g) {
 					var imgs = ["Actor1.png","map.png","donghua.png","eff.png"];
 					var json = ["map.json","map4.json"];
-					var audios = [{url:"res/audio/horse.ogg",name:"test1"}];
+					var audios = [{url:"res/audio/horse.ogg",name:"test1"},{url:"res/audio/test.ogg",name:"test2"}];
 					starter.regImgRes(imgs);
 					starter.regJSONRes(json);
 					starter.regAudioRes(audios);
