--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 					var imgs = ["Actor1.png","map.png","donghua.png","eff.png"];
 					var json = ["map.json","map4.json"];
 					var audios = [{url:"res/audio/horse.ogg",name:"test1"}];
+					starter.config({audio:{enable:true,echo:false}});
 					starter.regImgRes(imgs);
 					starter.regJSONRes(json);
 					starter.regAudioRes(audios);
