调整加载顺序
显示loading。 根据地图大小调整canvas大小

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			 require( ["./booter.js","engine/MovementObject","engine/MovieClip","engine/Constants","engine/Direction","engine/globalScope"], 
 				function(starter,MovementObject,MovieClip2D,C,direction,g) {
 					var imgs = ["Actor1.png","map.png","donghua.png","eff.png"];
-					var json = ["map.json","map4.json"];
+					var json = ["map800480.json"];
 					var audios = [{url:"res/audio/horse.ogg",name:"test1"}];
 					starter.config({audio:{enable:true,echo:false}});
 					starter.regImgRes(imgs);
